refactor: 딜러 이름 상수 분리